--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -14,7 +14,7 @@
     {{ $is_sponsor := site.Params.i_am_a_sponsor | default false }}
     {{ $hide_published_with_footer := site.Params.power_ups.hide_published_with | default true }}
     {{ if not (and $is_sponsor $hide_published_with_footer) }}
-      {{ $default := "This website was created with the Wowchemy's Template.<br>[The source code of this website is at Eason's GitHub](https://github.com/EasonC13/eason.phd)" }}
+      {{ $default := "" }}
       {{ $i18n_published_with := i18n "published_with" | default $default }}
       {{ if not (findRE "{wowchemy}" $i18n_published_with) }}
         {{/*  {{ warnf "Please attribute Wowchemy using `{wowchemy}` in the `published_with` text." }}  */}}
